Fix alignment of tags.

--- a/src/scss/style.dist.scss
+++ b/src/scss/style.dist.scss
@@ -313,6 +313,8 @@ p.entry-meta-tags {
 
 p.entry-meta-tags a {
     margin-right: 5px;
+    display: inline-block;
+    margin-bottom: 5px;
 }
 
 section.author-box {
